# aliyun-log-fluent-bit-plugin

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
.github/scripts/: build-linux-artifact.sh
.github/workflows/: ci.yml  release-artifacts.yml
docs/: customer-guide.md  design.md  docker-build.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md
examples/: fluent-bit.conf  putlogs_smoke.cpp
include/aliyun_sls/: sls_c_api.h  sls_client.hpp
scripts/: package_release.sh
src/: fluent_bit_out_aliyun_sls_plugin.c  sls_batch.cpp  sls_batch.hpp  sls_c_api.cpp  sls_client.cpp  sls_compress.cpp  sls_compress.hpp  sls_crypto.cpp  sls_crypto.hpp  sls_http.cpp  sls_protobuf.cpp  sls_protobuf.hpp
tests/: test_batch.cpp  test_client.cpp  test_crypto.cpp  test_protobuf.cpp
